# SDL2Lib

./: .clang-format  .clang-tidy  AbstractCallback.cpp  AbstractCallback.h  Animation.cpp  Animation.h  Button.cpp  Button.h  CMakeLists.txt  CheckBox.cpp  CheckBox.h  Color.cpp  Color.h  Container.cpp  Container.h  Dockerfile  DropDownList.cpp  DropDownList.h  EventHandler.cpp  EventHandler.h  FontManager.cpp  FontManager.h  Image.cpp  Image.h  Line.cpp  Line.h  Logger.cpp  Logger.h  Point.cpp  Point.h  Readme.md  Rectangle.cpp  Rectangle.h  Renderer.cpp  Renderer.h  SDLSystem.cpp  SDLSystem.h  Screen.h  ScreenManager.cpp  ScreenManager.h  (+29 more)
.github/workflows/: cmake-multi-platform.yml
Interfaces/: Renderable.h
scripts/: check_clang_format.sh  coverage_html.sh  verify_commits.py
tests/: CMakeLists.txt  EventHandlerTests.cpp  ImageTests.cpp  LineTests.cpp  RectangleTests.cpp  TextFieldTests.cpp  WindowTests.cpp
utils/: Timer.h
